# py-file-organizer-v1

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/file_organizer/: exif.py  main.py  organizer.py
tests/: test_exif.py  test_organizer.py
