[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "file-organizer"
version = "0.1.0"
description = "Organise photos, RAW files, and videos into year/month folders using EXIF data."
requires-python = ">=3.10"
dependencies = ["exifread>=3.0"]

[project.scripts]
file-organizer = "file_organizer.main:main"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]
heic = ["pillow-heif>=0.13", "Pillow>=10"]
location = ["reverse_geocoder>=1.5"]
all = ["pillow-heif>=0.13", "Pillow>=10", "reverse_geocoder>=1.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
